Added 6 Source and Target

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,10 @@
   <groupId>Emirates</groupId>
   <artifactId>WebAutomation</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-
+  <properties>
+   <maven.compiler.source>6</maven.compiler.source>
+   <maven.compiler.target>1.6</maven.compiler.target>
+ </properties>
 
    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
